# marlin-ad-alfa

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MANIFEST.sha256.json  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: getting-started.md  implementation-status.md  index.md  mkdocs.yml
docs/user-guide/: anomaly-detection.md  concepts.md  evaluation.md  explainability.md  maritime-data.md  minimal-workflow.md  model-monitoring.md
examples/: README.md  minimal_workflow.py
scripts/: build_docs.py  download_sample_data.py  run_benchmarks.py
src/marlin_ad/: __about__.py
src/marlin_ad/alerting/: __init__.py  formatter.py  rules.py
src/marlin_ad/cli/: main.py
src/marlin_ad/config/: __init__.py  defaults.py  schema.py
src/marlin_ad/datasets/: __init__.py  registry.py  validation.py
src/marlin_ad/detection/: __init__.py  base.py  scoring.py
src/marlin_ad/evaluation/: __init__.py  benchmarks.py  metrics.py  reports.py  robustness.py
src/marlin_ad/explainability/: __init__.py  counterfactuals.py  reports.py  shap_adapter.py
src/marlin_ad/logging/: __init__.py  setup.py
src/marlin_ad/monitoring/: __init__.py  base.py
src/marlin_ad/pipelines/: __init__.py  end_to_end.py  fit.py  score.py  serve.py
src/marlin_ad/plugins/: __init__.py  builtin.py  entrypoints.py  registry.py
src/marlin_ad/preprocessing/: __init__.py  cleaning.py  features.py  time.py  windows.py
src/marlin_ad/types/: __init__.py  domain.py  errors.py  protocols.py  (+1 more)
tests/: test_alert_sinks.py  test_alerting_orchestration.py  test_cli.py  test_core_contracts.py  test_detectors.py  test_monitoring.py  test_orchestration_pipeline.py  test_plugins_registry.py  test_scaffolds.py  test_smoke.py
tests/datasets/: test_registry.py  test_validation_and_loaders.py
tests/detection/: test_v1_detectors.py
tests/monitoring/: test_interfaces.py
tests/preprocessing/: test_preprocessing.py
(+32 files in other folders)
