[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "marlin-ad"
version = "0.1.0"
description = "Trustworthy anomaly detection + self-monitoring AI for maritime systems."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
  {name = "Dr Tymoteusz Miller"},
  {name = "kpt. Irmina Durlik"},
]
keywords = ["anomaly-detection", "drift", "trustworthy-ai", "maritime", "xai", "monitoring"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]

[project.urls]
Documentation = "https://github.com/TyMill/marlin-ad-alfa/tree/main/docs"
Repository = "https://github.com/TyMill/marlin-ad-alfa"
Issues = "https://github.com/TyMill/marlin-ad-alfa/issues"

dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "pydantic>=2.6",
  "typing-extensions>=4.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.10",
  "pre-commit>=3.7",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
]
xai = ["shap>=0.45"]
serve = ["fastapi>=0.110", "uvicorn>=0.29"]

[project.scripts]
marlin-ad = "marlin_ad.cli.main:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["docs/"]

[[tool.mypy.overrides]]
module = ["pandas", "pandas.*", "sklearn", "sklearn.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q --disable-warnings --maxfail=1"
testpaths = ["tests"]
